--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-
+<body> 
+    <title> Largest E commerce website </title>
+    </body>
 <head>
     <meta charset="utf-8">
     <title>WebSite</title>
